...
    [self.view setBackgroundColor:[UIColor whiteColor]];

    self.inputField = [[UITextField alloc] initWithFrame:CGRectMake(50.0, 80.0, 300.0, 50.0)];
    self.inputField.placeholder = @"Input something to synthesize...";
    self.inputField.borderStyle = UITextBorderStyleRoundedRect;
    self.inputField.delegate = self;
    self.inputField.accessibilityIdentifier = @"input_text_field";
    [self.view addSubview:self.inputField];

    self.synthesisDefaultButton = [UIButton buttonWithType:UIButtonTypeSystem];
    [self.synthesisDefaultButton addTarget:self action:@selector(synthesisDefaultButtonTapped:) forControlEvents:UIControlEventTouchUpInside];
    [self.synthesisDefaultButton setTitle:@"Start synth to speaker" forState:UIControlStateNormal];
    [self.synthesisDefaultButton setFrame:CGRectMake(50.0, 150.0, 300.0, 50.0)];
...
    [self.view addSubview:self.synthesisDefaultButton];

    self.synthesisToFileButton = [UIButton buttonWithType:UIButtonTypeSystem];
    [self.synthesisToFileButton addTarget:self action:@selector(synthesisToFileButtonTapped:) forControlEvents:UIControlEventTouchUpInside];
    [self.synthesisToFileButton setTitle:@"Start synth to file" forState:UIControlStateNormal];
    [self.synthesisToFileButton setFrame:CGRectMake(50.0, 200.0, 300.0, 50.0)];
    self.synthesisToFileButton.accessibilityIdentifier = @"synthesis_file_button";
    [self.view addSubview:self.synthesisToFileButton];

    self.synthesisToPullAudioOutputStreamButton = [UIButton buttonWithType:UIButtonTypeSystem];
    [self.synthesisToPullAudioOutputStreamButton addTarget:self action:@selector(synthesisToPullAudioOutputStreamButtonTapped:) forControlEvents:UIControlEventTouchUpInside];
    [self.synthesisToPullAudioOutputStreamButton setTitle:@"Start synth to file with pull stream" forState:UIControlStateNormal];
    [self.synthesisToPullAudioOutputStreamButton setFrame:CGRectMake(50.0, 250.0, 300.0, 50.0)];
    self.synthesisToPullAudioOutputStreamButton.accessibilityIdentifier = @"synthesis_pull_stream_button";
    [self.view addSubview:self.synthesisToPullAudioOutputStreamButton];

    self.synthesisToPushAudioOutputStreamButton = [UIButton buttonWithType:UIButtonTypeSystem];
    [self.synthesisToPushAudioOutputStreamButton addTarget:self action:@selector(synthesisToPushAudioOutputStreamButtonTapped:) forControlEvents:UIControlEventTouchUpInside];
    [self.synthesisToPushAudioOutputStreamButton setTitle:@"Start synth to file with push stream" forState:UIControlStateNormal];
    [self.synthesisToPushAudioOutputStreamButton setFrame:CGRectMake(50.0, 300.0, 300.0, 50.0)];
    self.synthesisToPushAudioOutputStreamButton.accessibilityIdentifier = @"synthesis_push_stream_button";
    [self.view addSubview:self.synthesisToPushAudioOutputStreamButton];

    self.synthesisToAudioDataStreamButton = [UIButton buttonWithType:UIButtonTypeSystem];
    [self.synthesisToAudioDataStreamButton addTarget:self action:@selector(synthesisToAudioDataStreamButtonTapped:) forControlEvents:UIControlEventTouchUpInside];
    [self.synthesisToAudioDataStreamButton setTitle:@"Start synth to file with audio data stream" forState:UIControlStateNormal];
    [self.synthesisToAudioDataStreamButton setFrame:CGRectMake(50.0, 350.0, 300.0, 50.0)];
    self.synthesisToAudioDataStreamButton.accessibilityIdentifier = @"synthesis_audio_data_stream_button";
    [self.view addSubview:self.synthesisToAudioDataStreamButton];

    self.synthesisEventButton = [UIButton buttonWithType:UIButtonTypeSystem];
    [self.synthesisEventButton addTarget:self action:@selector(synthesisEventButtonTapped:) forControlEvents:UIControlEventTouchUpInside];
    [self.synthesisEventButton setTitle:@"Start synth with events" forState:UIControlStateNormal];
    [self.synthesisEventButton setFrame:CGRectMake(50.0, 400.0, 300.0, 50.0)];
    self.synthesisEventButton.accessibilityIdentifier = @"synthesis_event_button";
    [self.view addSubview:self.synthesisEventButton];

    self.resultLabel = [[UILabel alloc] initWithFrame:CGRectMake(50.0, 400.0, 300.0, 200.0)];
    self.resultLabel.lineBreakMode = NSLineBreakByWordWrapping;
    self.resultLabel.numberOfLines = 0;
    self.resultLabel.accessibilityIdentifier = @"result_label";
    [self.view addSubview:self.resultLabel];
}

- (IBAction)synthesisDefaultButtonTapped:(UIButton *)sender {
    dispatch_async(dispatch_get_global_queue(QOS_CLASS_DEFAULT, 0), ^{
        [self synthesisToSpeaker];
...
